--- a/style.css
+++ b/style.css
@@ -348,16 +348,16 @@ footer .bottom-bar{
     }
 }
 
-@media  screen and (max-width: 769px) {
+@media screen and (max-width: 600px) {
 
-    .navbar h2{
-        font-size: 28px;
+    .navbar h2 {
+        font-size: 24px;
         margin-bottom: 20px;
         margin-top: 40px;
     }
    
     .navbar ul li a{
-        font-size: 16px;
+        font-size: 12px;
         justify-content: center;
     }
 
@@ -376,6 +376,13 @@ footer .bottom-bar{
     .main p.subtitle{
         font-size: 13px;
 }
+
+    .about .info h3{
+        font-size: 24px;
+    }
+    .about .info p{
+        font-size: 16px;
+    }
 
     .skills {
         flex-direction: column;
